rust-firmware/src/drivers/zephyr/zephyr_drivers/ili9342_lcd.h

void ili9342_lcd_spi_init();
//-----------------------------------------------------------------------------
void ili9342_lcd_reset();
void ili9342_lcd_init();
//-----------------------------------------------------------------------------
void ili9342_lcd_set_brightness(uint8_t brightness);
//-----------------------------------------------------------------------------
void ili9342_lcd_led_on();
void ili9342_lcd_led_off();
//-----------------------------------------------------------------------------
void ili9342_lcd_sleep_in();
void ili9342_lcd_sleep_out();
void ili9342_lcd_display_on();
void ili9342_lcd_display_off();
void ili9342_lcd_power_on();
void ili9342_lcd_power_off();
bool ili9342_lcd_draw_qr(const uint8_t * qr_data, uint16_t x, uint16_t y, 
    const uint8_t qr_width, uint16_t image_max_width, bool center);
//-----------------------------------------------------------------------------
void ili9342_lcd_fill_rect(uint16_t x, uint16_t y, uint16_t w, uint16_t h, 
                                 uint16_t color565);
//-----------------------------------------------------------------------------
void ili9342_lcd_draw_screen_corners(bool allCorners);
//-----------------------------------------------------------------------------
void ili9342_lcd_draw_bitmap(uint16_t x, uint16_t y, uint16_t width, uint16_t height,
  const uint8_t * bitmap, uint16_t bitmap_row_pitch);